--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Αρχική | 3ο Σύστημα Αγ. Παρασκευής</title>
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="myassets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!--====== Bootstrap ======-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,7 +38,7 @@
             3ο Σύστημα Προσκόπων Αγ. Παρασκευής
         </a> -->
         <a class="nav-link" href="#">
-            <img src="myassets/images/logo3.png" width="400vw" alt="">
+            <img src="assets/logo3.png" width="400vw" alt="">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
