--- a/index.html
+++ b/index.html
@@ -31,21 +31,16 @@
     <!--==========================
   Header
   ============================-->
-
-    <nav id="top" class="navbar sticky-top navbar-light">
-        <!-- <a class="navbar-brand" href="#top">
-            <img src="myassets/images/fav120.png" height="60" class="d-inline-block align-center" alt="">
-            3ο Σύστημα Προσκόπων Αγ. Παρασκευής
-        </a> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="nav-link" href="#">
             <img src="assets/logo3.png" width="400vw" alt="">
         </a>
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav navbar-right">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -61,6 +56,7 @@
             </ul>
         </div>
     </nav>
+
 </body>
 
 </html>
