--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
             <img src="assets/110c.png" width="100%" alt="">
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2</div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
+            <!-- 2i selida, valte edo ton kodika sas -->
+            <p>geia sas</p>
+        </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
