--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
             <img src="assets/110c.png" width="100%" alt="">
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
+       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
             <!-- 2i selida, valte edo ton kodika sas -->
-            <p>geia sas</p>
+            <div class="container">
+                <p>geia sas</p>
+            </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
             <div class="row">
