--- a/index.html
+++ b/index.html
@@ -46,42 +46,15 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-            <img src="assets/110c.png" width="100%" alt="">
+            <!-- arxiki -->
         </div>
        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
             <!-- 2i selida, valte edo ton kodika sas -->
-            <div class="container">
-                <p>geia sas</p>
-            </div>
+            
+           
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="map-responsive"><iframe width="450" height="450"
-                            src="https://maps.google.com/maps?q=Public Athletic Center Of Agia Paraskeui&t=&z=15&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                    </div>
-                    <style>
-                        .map-responsive {
-                            overflow: hidden;
-                            padding-bottom: 56.25%;
-                            position: relative;
-                            height: 0;
-                        }
-
-                        .map-responsive iframe {
-                            left: 0;
-                            top: 0;
-                            height: 100%;
-                            width: 100%;
-                            position: absolute;
-                        }
-                    </style>
-                </div>
-                <div class="col-lg-6 col-sm-12">
-                    Ta stoixeia epikoinwnias
-                </div>
-            </div>
+            <!-- 3i selida -->
         </div>
     </div>
 
