--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
 
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
+            <p> arxiki</p>
             <!-- arxiki -->
         </div>
-       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
+       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <!-- 2i selida, valte edo ton kodika sas -->
-            
+            <p> 2 selida</p>
            
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
             <!-- 3i selida -->
+            <p> 3 selida</p>
         </div>
     </div>
 
