--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/favicon.png">
     <title>3ο Σύστημα Προσκόπων Αγ. Παρασκευής</title>
     <meta name="description" content="">
     <meta name="author" content="">
