--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
             <div class="container">
             <!-- 3i selida -->
-            <p> 3 selida</p>
+            <p> Τηλεφωνο </p>
             </div>
         </div>
     </div>
