--- a/index.html
+++ b/index.html
@@ -44,13 +44,26 @@
     </nav>
 
     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <div class="container">
-             <!-- arxiki -->
-            <p> arxiki</p>
-            
+       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="container text-center"><img width="99%"
+                    src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/110c.png"></img>
             </div>
-            
+            <div class="container">
+                <!-- arxiki -->
+
+                <h2 style="text-align: center;"> Αποστολή </h2>
+                <p> </p>
+                <p><span> Αποστολή του Προσκοπισμού είναι να συμβάλλει στη διαπαιδαγώγηση
+                        των
+                        νέων
+                        μέσω ενός συστήματος Αξιών
+                        και να βοηθήσει στην οικοδόμηση ενός καλύτερου κόσμου, όπου οι άνθρωποι ολοκληρώνονται ως άτομα
+                        και
+                        διαδραματίζουν έναν εποικοδομητικό ρόλο στην κοινωνία. Για την επίτευξη της Αποστολής, η
+                        Προσκοπική
+                        Κίνηση στηρίζεται στην εθελοντική, υπεύθυνη προσφορά ενηλίκων καταρτισμένων στελεχών.</span></p>
+
+            </div>
         </div>
        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
            <div class="container">
