--- a/index.html
+++ b/index.html
@@ -42,15 +42,24 @@
             </div>
         </div>
     </nav>
-
-    <div class="tab-content" id="myTabContent">
-       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="container text-center"><img width="99%"
                     src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/110c.png"></img>
             </div>
             <div class="container">
                 <!-- arxiki -->
+                <br />
+                <h2 style="text-align: center;"> Η μεγαλύτερη εθελοντική, παιδαγωγική κίνηση για νέους στην Ελλάδα!
+                </h2>
+                <p> </p>
+                <p><span> Ο Προσκοπισμός είναι μια εθελοντική, πολιτική, μη κομματική, παιδαγωγική κίνηση για νέους
+                        ανθρώπους, ανοικτή σε όλους χωρίς διακρίσεις, η οποία ιδρύθηκε στην Ελλάδα από τον Αθανάσιο
+                        Λευκαδίτη το 1910, έχοντας αυτή τη στιγμή πάνω από 25,000 ενεργά μέλη σε 350 γειτονιές σε
+                        ολόκληρη την Ελλάδα.</span></p>
 
+                <p><span> Συστάθηκε με το Νόμο 1066/1917, εδρεύει στην Αθήνα και αποτελεί Ιδρυμα Ιδιωτικού Δικαίου
+                        (Ν.Π.Ι.Δ.). Έχει χαρακτήρα κοινωφελή μη κερδοσκοπικό και εποπτεύεται από το Υπουργείο Παιδείας,
+                        Έρευνας και Θρησκευμάτων.</span></p>
                 <h2 style="text-align: center;"> Αποστολή </h2>
                 <p> </p>
                 <p><span> Αποστολή του Προσκοπισμού είναι να συμβάλλει στη διαπαιδαγώγηση
@@ -62,8 +71,22 @@
                         διαδραματίζουν έναν εποικοδομητικό ρόλο στην κοινωνία. Για την επίτευξη της Αποστολής, η
                         Προσκοπική
                         Κίνηση στηρίζεται στην εθελοντική, υπεύθυνη προσφορά ενηλίκων καταρτισμένων στελεχών.</span></p>
+                <h2 style="text-align: center;">Όραμα</h2>
+                <p><span>Το 2027 ο Προσκοπισμός να συνεχίσει να αποτελεί πρωτοπόρα παιδαγωγική Κίνηση Αρχών και Αξιών,
+                        υποστηριζόμενος από έναν οργανισμό με σύγχρονο προσανατολισμό, δίνοντας την ευκαιρία σε 40.000
+                        νέους και νέες σε όλη την Ελλάδα να συμμετέχουν και να ωφελούνται από ένα καινοτόμο πρόγραμμα,
+                        που θα τους ενεργοποιεί ως χρήσιμους και ευτυχισμένους πολίτες μιας καλύτερης κοινωνίας.</span>
+                </p>
+                <h2 style="text-align: center;">Το Σύστημά μας</h2>
+                <p><span>Το 3ο Σύστημα Προσκόπων Αγίας Παρασκευής λειτουργεί πάνω απο 35 χρόνια. Τα τελευταία χρόνια
+                        εδρεύει στο Πολιτιστικό
+                        Κέντρο Αγίας Παρασκευής και αποτελείτε από την Αγέλη λυκοπούλων, την Ομάδα προσκόπων και την
+                        Κοινότητα ανιχνευτών</span>
+                </p>
+
 
             </div>
+        </div>
         </div>
        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
            <div class="container">
