--- a/index.html
+++ b/index.html
@@ -130,6 +130,28 @@
             </div>
         </div>
     </div>
+ <!-- footer -->
+    <footer class="page-footer">
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-lg-6 col-sm-12" style="background-color: #ebb5f0; text-align: center;">
+                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
+                        aria-controls="contact" aria-selected="false"><u>Επικοινωνία</u></a>
+                </div>
+
+                <div class="col-lg-6 col-sm-12" style="background-color: #bcdce4; text-align: center">
+                    <img src="C:\Users\George\Desktop\1.jpg" width="30%"></img>
+                </div>
+            </div>
+
+            <div class="row">
+                <p class="text-center small mx-auto" style="margin-top: 0; padding-top: 0;">© Made by Koinothta</p>
+            </div>
+        </div>
+
+
+    </footer>
 
 
     <!-- Optional JavaScript -->
