--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="col-lg-6 col-sm-12" style="background-color: #bcdce4; text-align: center">
-                    <img src="C:\Users\George\Desktop\1.jpg" width="30%"></img>
+                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/monkey-footer.jpg" width="30%"></img>
                 </div>
             </div>
 
