--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>3ο Σύστημα Προσκόπων Αγ. Παρασκευής</title>
     <meta name="description" content="">
     <meta name="author" content="">
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/top.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="myassets/images/top.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,61 +42,60 @@
             </div>
         </div>
     </nav>
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <div class="container text-center"><img width="99%"
-                    src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/110c.png"></img>
-            </div>
+
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="container">
+                <div class="container text-center"><img width="99%"
+                        src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/110c.png"></img>
+                </div>
                 <!-- arxiki -->
                 <br />
                 <h2 style="text-align: center; color: rgb(77, 0, 77);"> Η μεγαλύτερη εθελοντική, παιδαγωγική κίνηση για
-                νέους στην Ελλάδα!
-            </h2>
-            <p> </p>
-            <p><span> Ο Προσκοπισμός είναι μια εθελοντική, πολιτική, μη κομματική, παιδαγωγική κίνηση για νέους
-                    ανθρώπους, ανοικτή σε όλους χωρίς διακρίσεις, η οποία ιδρύθηκε στην Ελλάδα από τον Αθανάσιο
-                    Λευκαδίτη το 1910, έχοντας αυτή τη στιγμή πάνω από 25,000 ενεργά μέλη σε 350 γειτονιές σε
-                    ολόκληρη την Ελλάδα.</span></p>
+                    νέους στην Ελλάδα!
+                </h2>
+                <p> </p>
+                <p><span> Ο Προσκοπισμός είναι μια εθελοντική, πολιτική, μη κομματική, παιδαγωγική κίνηση για νέους
+                        ανθρώπους, ανοικτή σε όλους χωρίς διακρίσεις, η οποία ιδρύθηκε στην Ελλάδα από τον Αθανάσιο
+                        Λευκαδίτη το 1910, έχοντας αυτή τη στιγμή πάνω από 25,000 ενεργά μέλη σε 350 γειτονιές σε
+                        ολόκληρη την Ελλάδα.</span></p>
 
-            <p><span> Συστάθηκε με το Νόμο 1066/1917, εδρεύει στην Αθήνα και αποτελεί Ιδρυμα Ιδιωτικού Δικαίου
-                    (Ν.Π.Ι.Δ.). Έχει χαρακτήρα κοινωφελή μη κερδοσκοπικό και εποπτεύεται από το Υπουργείο Παιδείας,
-                    Έρευνας και Θρησκευμάτων.</span></p>
-            <h2 style="text-align: center; color: rgb(77, 0, 77);"> Αποστολή </h2>
-            <p> </p>
-            <p><span> Αποστολή του Προσκοπισμού είναι να συμβάλλει στη διαπαιδαγώγηση
-                    των
-                    νέων
-                    μέσω ενός συστήματος Αξιών
-                    και να βοηθήσει στην οικοδόμηση ενός καλύτερου κόσμου, όπου οι άνθρωποι ολοκληρώνονται ως άτομα
-                    και
-                    διαδραματίζουν έναν εποικοδομητικό ρόλο στην κοινωνία. Για την επίτευξη της Αποστολής, η
-                    Προσκοπική
-                    Κίνηση στηρίζεται στην εθελοντική, υπεύθυνη προσφορά ενηλίκων καταρτισμένων στελεχών.</span></p>
-            <h2 style="text-align: center; color: rgb(77, 0, 77);">Όραμα</h2>
-            <p><span>Το 2027 ο Προσκοπισμός να συνεχίσει να αποτελεί πρωτοπόρα παιδαγωγική Κίνηση Αρχών και Αξιών,
-                    υποστηριζόμενος από έναν οργανισμό με σύγχρονο προσανατολισμό, δίνοντας την ευκαιρία σε 40.000
-                    νέους και νέες σε όλη την Ελλάδα να συμμετέχουν και να ωφελούνται από ένα καινοτόμο πρόγραμμα,
-                    που θα τους ενεργοποιεί ως χρήσιμους και ευτυχισμένους πολίτες μιας καλύτερης κοινωνίας.</span>
-            </p>
-            <h2 style="text-align: center; color: rgb(77, 0, 77);">Το Σύστημά μας</h2>
-            <p><span>Το 3ο Σύστημα Προσκόπων Αγίας Παρασκευής λειτουργεί πάνω απο 35 χρόνια. Τα τελευταία χρόνια
-                    εδρεύει στο Πολιτιστικό
-                    Κέντρο Αγίας Παρασκευής και αποτελείτε από την Αγέλη λυκοπούλων, την Ομάδα προσκόπων και την
-                    Κοινότητα ανιχνευτών.</span>
-            </p>
+                <p><span> Συστάθηκε με το Νόμο 1066/1917, εδρεύει στην Αθήνα και αποτελεί Ιδρυμα Ιδιωτικού Δικαίου
+                        (Ν.Π.Ι.Δ.). Έχει χαρακτήρα κοινωφελή μη κερδοσκοπικό και εποπτεύεται από το Υπουργείο Παιδείας,
+                        Έρευνας και Θρησκευμάτων.</span></p>
+                <h2 style="text-align: center; color: rgb(77, 0, 77);"> Αποστολή </h2>
+                <p> </p>
+                <p><span> Αποστολή του Προσκοπισμού είναι να συμβάλλει στη διαπαιδαγώγηση
+                        των
+                        νέων
+                        μέσω ενός συστήματος Αξιών
+                        και να βοηθήσει στην οικοδόμηση ενός καλύτερου κόσμου, όπου οι άνθρωποι ολοκληρώνονται ως άτομα
+                        και
+                        διαδραματίζουν έναν εποικοδομητικό ρόλο στην κοινωνία. Για την επίτευξη της Αποστολής, η
+                        Προσκοπική
+                        Κίνηση στηρίζεται στην εθελοντική, υπεύθυνη προσφορά ενηλίκων καταρτισμένων στελεχών.</span></p>
+                <h2 style="text-align: center; color: rgb(77, 0, 77);">Όραμα</h2>
+                <p><span>Το 2027 ο Προσκοπισμός να συνεχίσει να αποτελεί πρωτοπόρα παιδαγωγική Κίνηση Αρχών και Αξιών,
+                        υποστηριζόμενος από έναν οργανισμό με σύγχρονο προσανατολισμό, δίνοντας την ευκαιρία σε 40.000
+                        νέους και νέες σε όλη την Ελλάδα να συμμετέχουν και να ωφελούνται από ένα καινοτόμο πρόγραμμα,
+                        που θα τους ενεργοποιεί ως χρήσιμους και ευτυχισμένους πολίτες μιας καλύτερης κοινωνίας.</span>
+                </p>
+                <h2 style="text-align: center; color: rgb(77, 0, 77);">Το Σύστημά μας</h2>
+                <p><span>Το 3ο Σύστημα Προσκόπων Αγίας Παρασκευής λειτουργεί πάνω απο 35 χρόνια. Τα τελευταία χρόνια
+                        εδρεύει στο Πολιτιστικό
+                        Κέντρο Αγίας Παρασκευής και αποτελείτε από την Αγέλη λυκοπούλων, την Ομάδα προσκόπων και την
+                        Κοινότητα ανιχνευτών.</span>
+                </p>
 
             </div>
         </div>
-        </div>
-       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-           <div class="container">
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">2
             <!-- 2i selida, valte edo ton kodika sas -->
-            <p> 2 selida</p>
-             </div>
-           
+            <div class="container">
+                <p>geia sas</p>
+            </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-
             <div class="container">
                 <!-- 3i selida -->
                 <div class="row">
@@ -145,7 +144,10 @@
             </div>
         </div>
     </div>
- <!-- footer -->
+
+
+
+    <!-- footer -->
     <footer class="page-footer">
         <div class="container-fluid">
 
@@ -156,7 +158,8 @@
                 </div>
 
                 <div class="col-lg-6 col-sm-12" style="background-color: #bcdce4; text-align: center">
-                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/monkey-footer.jpg" width="30%"></img>
+                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/monkey-footer.jpg"
+                        width="30%"></img>
                 </div>
             </div>
 
@@ -167,8 +170,6 @@
 
 
     </footer>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
