--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/favicon.png">
     <title>3ο Σύστημα Προσκόπων Αγ. Παρασκευής</title>
     <meta name="description" content="">
     <meta name="author" content="">
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="myassets/images/top.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/top.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
