--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                     </div>
                 <div class="col-5">
             
-                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada1.jpg" width="70%">   <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada2.jpg" width="70%"> 
+                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada1.jpg" width="70%">   <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada2.JPG" width="70%"> 
                     
                 </div>
                 <div class="col-4">
-                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada3.jpg" width="90%"> <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada4.jpg" width="90%"> 
+                    <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada3.JPG" width="90%"> <img src="https://raw.githubusercontent.com/gntouts/3ospagparaskevis/master/assets/omada4.JPG" width="90%"> 
 
                 </div>
 
